Fix an error in font weight conversion

The fallback code for conversion from fontconfig font weights
to PangoWeight was mixing up PANGO_WEIGHT_SEMILIGHT and
PANGO_WEIGHT_LIGHT.

https://bugzilla.gnome.org/show_bug.cgi?id=749635